[gd_scene load_steps=16 format=3 uid="uid://cxihpt2730h7e"]

[ext_resource type="Script" uid="uid://deg42w0cmus74" path="res://enemy.gd" id="1_3yqyl"]
[ext_resource type="Texture2D" uid="uid://ypi4ej0lfeyh" path="res://2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Character.png" id="1_epg4t"]
[ext_resource type="Texture2D" uid="uid://diwrsnd5rl85m" path="res://catanim/atk_frame/Paint Layer 4.PNG" id="3_wujgv"]
[ext_resource type="Texture2D" uid="uid://c7n1tnuexmsqq" path="res://catanim/atk_frame/Paint Layer 1.PNG" id="4_hb8ge"]
[ext_resource type="Texture2D" uid="uid://bbgqwiljkpq7t" path="res://catanim/atk_frame/Paint Layer 2.PNG" id="5_e1ltt"]
[ext_resource type="Texture2D" uid="uid://pcegsnsahehy" path="res://catanim/atk_frame/prgprbar1.png" id="6_wujgv"]
[ext_resource type="Texture2D" uid="uid://doeaoj6v7qkp5" path="res://catanim/atk_frame/prgprbar3.png" id="7_hb8ge"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dxifv"]
atlas = ExtResource("1_epg4t")
region = Rect2(96, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjut"]
atlas = ExtResource("1_epg4t")
region = Rect2(80, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0g06"]
atlas = ExtResource("1_epg4t")
region = Rect2(64, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ar8e5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0g06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}],
"loop": false,
"name": &"attack_anim",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_5hcft"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_wujgv")
}, {
"duration": 1.0,
"texture": ExtResource("4_hb8ge")
}, {
"duration": 1.0,
"texture": ExtResource("5_e1ltt")
}, {
"duration": 1.0,
"texture": ExtResource("3_wujgv")
}],
"loop": false,
"name": &"attack_vfx_enemy",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_epg4t"]
radius = 8.0
height = 19.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3yqyl"]
radius = 15.0

[sub_resource type="GDScript" id="GDScript_wujgv"]
script/source = "extends TextureProgressBar


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
	
"

[node name="Area2Denemy" type="Area2D"]
collision_layer = 2
script = ExtResource("1_3yqyl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ar8e5")
animation = &"attack_anim"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5hcft")
animation = &"attack_vfx_enemy"
frame = 3
frame_progress = 1.0

[node name="hurtbox2" type="Area2D" parent="."]

[node name="hurtbox" type="CollisionShape2D" parent="hurtbox2"]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_epg4t")

[node name="hitbox2" type="Area2D" parent="."]
position = Vector2(-12, -20)

[node name="hitbox" type="CollisionShape2D" parent="hitbox2"]
position = Vector2(12, 20)
shape = SubResource("CircleShape2D_3yqyl")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="delay" type="Timer" parent="."]
wait_time = 0.321

[node name="enemy_attack" type="CanvasGroup" parent="."]

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = -12.0
offset_top = -20.0
offset_right = 12.0
offset_bottom = 7.0
grow_horizontal = 2
value = 94.0
texture_under = ExtResource("6_wujgv")
texture_progress = ExtResource("7_hb8ge")
script = SubResource("GDScript_wujgv")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_AnimatedSprite2D_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="delay" to="." method="_on_delay_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
